--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
     "email": "huizhe.xiao@gmail.com"
   }
   , "description": "the missing thumbnail service for amazone AWS S3"
-  , "version": "0.0.1"
+  , "version": "0.0.2"
   , "private": false
   , "homepage": "https://github.com/huxia/thumbnaild"
   , "repository": {
     "type": "git",
     "url": "git://github.com/huxia/thumbnaild.git"
   }
+  , "licenses": [{
+      "type": "MIT"
+    , "url": "https://github.com/huxia/thumbnaild#license"
+  }]
+  , "scripts": {
+    "start": "node app.js"
+  }
   , "main": "./core.js"
   , "dependencies": {
-      "express": ">= 3.0.0"
+      "express": "3.0.0"
     , "ejs": ">= 0.0.1"
     , "aws-sdk": ">= 0.9.0"
     , "imagemagick": "latest"
