--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "email": "huizhe.xiao@gmail.com"
   }
   , "description": "the missing thumbnail service for amazone AWS S3"
-  , "version": "0.0.2"
+  , "version": "0.0.3"
   , "private": false
   , "homepage": "https://github.com/huxia/thumbnaild"
   , "repository": {
@@ -16,8 +16,8 @@
       "type": "MIT"
     , "url": "https://github.com/huxia/thumbnaild#license"
   }]
-  , "scripts": {
-    "start": "node app.js"
+  , "bin": {
+    "thumbnaild": "./bin"
   }
   , "main": "./core.js"
   , "dependencies": {
@@ -27,6 +27,10 @@
     , "imagemagick": "latest"
     , "moment": "latest"
     , "async": "0.2.6"
+    , "deep-extend": ">= 0.2.5"
+    , "optimist": ">= 0.4.0"
+    , "forever-monitor": ">= 1.2.1"
+    , "daemon": ">= 1.1.0"
   }
   , "devDependencies": {
       "mocha": "latest"
