--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "email": "huizhe.xiao@gmail.com"
   }
   , "description": "the missing thumbnail service for amazone AWS S3"
-  , "version": "0.0.5"
+  , "version": "0.0.6"
   , "private": false
   , "homepage": "https://github.com/huxia/thumbnaild"
   , "repository": {
@@ -31,6 +31,7 @@
     , "optimist": ">= 0.4.0"
     , "forever-monitor": ">= 1.2.1"
     , "daemon": ">= 1.1.0"
+    , "ncp": ">= 0.4.2"
   }
   , "devDependencies": {
       "mocha": "latest"
